--- a/package.json
+++ b/package.json
@@ -1,33 +1,21 @@
 {
   "name": "dev-duel",
-  "main": "/server/index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "serve": "concurrently \"npm run serve-api\" \"npm run start-client\"",
-    "serve-api": "nodemon -w ./server --exec \"babel-node server\"",
-    "start-client": "cd client && npm start",
-    "postinstall": "cd client && npm install"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.13.3",
-    "cors": "^2.7.1",
-    "cross-env": "^5.2.0",
-    "dotenv": "^6.0.0",
-    "express": "^4.13.3",
-    "express-validation": "^1.0.2",
-    "http-status": "^1.2.0",
-    "morgan": "^1.8.0",
-    "resource-router-middleware": "^0.6.0"
+    "axios": "^1.4.0",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
+    "next": "13.4.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/register": "^7.6.0",
-    "concurrently": "^4.0.1",
-    "joi": "^14.3.1",
-    "live-server": "^1.2.0",
-    "nodemon": "^1.19.2"
+    "styled-components": "^5.3.10"
   }
 }
